2023-11-03T00:42:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6739865103 # 1308
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-03
* notice: last 14d: unq all: 4 37
* notice: prev accum: outdated-unq outdated-all / unq all: 690 1086 / 712 1122
* notice: next accum: outdated-unq outdated-all / unq all: 690 1086 / 712 1123
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-11-02]

2023-11-02T16:12:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6735273882 # 1307
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-02
* notice: last 14d: unq all: 4 36
* notice: prev accum: outdated-unq outdated-all / unq all: 689 1084 / 712 1122
* notice: next accum: outdated-unq outdated-all / unq all: 690 1086 / 712 1122
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-19] / []

2023-11-02T08:11:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6729887691 # 1306
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-02
* notice: last 14d: unq all: 4 37
* notice: prev accum: outdated-unq outdated-all / unq all: 689 1084 / 711 1121
* notice: next accum: outdated-unq outdated-all / unq all: 689 1084 / 712 1122
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-19 2023-11-02]

2023-11-02T00:41:34Z: