@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-03T00:42:09Z",
-  "count_outdated" : 1086,
-  "uniques_outdated" : 690,
-  "count" : 1123,
-  "uniques" : 712,
+  "timestamp" : "2023-11-03T08:11:45Z",
+  "count_outdated" : 1089,
+  "uniques_outdated" : 693,
+  "count" : 1125,
+  "uniques" : 714,
   "clones" : [
-    {
-      "timestamp": "2023-10-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2023-10-21T00:00:00Z",
       "count": 3,
@@ -130,6 +121,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-03T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
