@@ -1,12 +1,7 @@
 {
-  "count": 37,
-  "uniques": 4,
+  "count": 36,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-10-20T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2023-10-21T00:00:00Z",
       "count": 3,
@@ -71,6 +66,11 @@
       "timestamp": "2023-11-02T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-03T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
