@@ -1,3 +1,12 @@
+2023-11-03T08:11:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6742734326 # 1309
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-03
+* notice: last 14d: unq all: 3 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 690 1086 / 712 1123
+* notice: next accum: outdated-unq outdated-all / unq all: 693 1089 / 714 1125
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2023-10-20] / [2023-11-03]
+
 2023-11-03T00:42:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6739865103 # 1308
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-03
